Replacing calls of ".get(0)" with ".getFirst()".